data/raw_logs/lexical/lex_16.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_16.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_16.c:1:24: error: expected ',' or ';' before ':' token
    1 | int main() { int x = 5 : 2; }
      |                        ^
